--- a/service.css
+++ b/service.css
@@ -5,6 +5,8 @@
     position: relative;
 
 }
+
+
 *{
     margin: 0;
 }
@@ -130,77 +132,52 @@ margin: 0 60px 0 0;
 .services7,.services8{
         padding:30px 0; ;
     }
-.naver{
-    float: right;
-    /*padding-top: 80px;*/
-}
-   .nav-item a{
-       list-style-type:none;
-    position:relative;
-    text-decoration: none;
-    font-size:16px;
-       text-align: center;
-      padding: 10px;
-       color: black;
-       /*line-height: 80px;*/
-}
-   .nav-item {
+@media only screen and (min-width:900px) {
+    .naver {
+        float: right;
+        position: relative;
+        display: inline-block;
+        font-size: 14px;
+        font-weight: 900;
+    }
 
-       display: inline;
-    padding:10px ;
-       /*height: 80px;*/
-       line-height: 80px;
+    .nav-list {
+        text-align: right;
+    }
 
+    .nav-item {
+        list-style-type: none;
+        float: left;
+        *display: inline;
+        zoom: 1;
+        position: relative;
+        line-height: 60px;
+    }
 
-}
-   .active{
-       border-bottom-style: solid;
-       color:deepskyblue ;
-       background-color: #dcdcdc;
-       border-width: 4px;
-
-   }
-    .nav-item:hover{
-        background-color:#dcdcdc;
-        color:deepskyblue;
-        border-bottom-style: solid;
-        border-width: 4px;
+    .nav-item a {
+        display: block;
+        color: black;
         text-decoration: none;
+        padding: 10px;
+
+    }
+
+    .active a {
+        background-color: #dcdcdc;
+        color: #29b5ff;
+        border-bottom: solid;
+
+    }
+
+    .nav-item > a:hover {
+        background-color: #dcdcdc;
+        color: #29b5ff;
+        border-bottom: solid;
+
+    }
+
+    .nav-item:hover
 }
-
-
-
-
-/*.nav{*/
-    /*position:relative;*/
-    /*display:inline-block;*/
-    /*font-size:14px;*/
-    /*!*font-weight:900;*!*/
-    /*line-height: 50px;*/
-/*}*/
-
-/*.nav-item{*/
-    /*float:left;*/
-    /**display:inline;*/
-    /*zoom:1;*/
-    /*position:relative;*/
-     /*display:block;*/
-/*}*/
-/*.nav-item a{*/
-    /*display:block;*/
-    /*color:black;*/
-    /*padding:15px ;*/
-    /*text-decoration: none*/
-/*}*/
-/*.nav-item:hover{*/
-    /*background-color:#f5f5f5;*/
-    /*border-bottom-style:solid ;*/
-    /*text-decoration: none;*/
-    /*color: dodgerblue;*/
-
-/*}*/
-
-
 
 @media only screen and (max-width:1000px) {
     .photo {
@@ -265,134 +242,96 @@ margin: 0 60px 0 0;
 
     margin: 50px 110px 0 20px;
 }
-.frame {
-        /*padding: 30px 0 30px 0;*/
-        height: auto;
-        background-color: #f5f5f5;
-        /*margin: 700px 0 30px 0;*/
-    padding-left: 0;
-    }
-.picture1 ,.picture3{
-        float: left;
-        /*width: 50%;*/
-        text-align: center;
-        /*padding: 50px 0;*/
 
-    }
-    .picture2 {
-
-        float: left;
-        /*width: 50%;*/
-        text-align: center;
-        /*padding: 50px 0;*/
-
-    }
-
-    .photo1 {
-        /*display:block;*/
-        text-align: center;
-
-    }
-
-    .development {
-        margin: 20px;
-    color:black;
-    font-size: 25px;
-    font-weight: bold;
-
-    }
-
-    .written {
-        text-align: center;
-        color: #888888;
-        /*margin: 60px 0 0 0;*/
-        font-size: 18px;
-    }
 
 }
 
 @media only screen and (max-width:900px) {
-    .collapse{
-    /*z-index: 2;*/
-    /*left: 0;*/
-    /*top:0;*/
-    /*right: 0;*/
-    height:auto;
-    /*line-height: 80px;*/
-    background-color: white;
-    box-shadow: 1px 2px 3px #888888;
-    border-width:1px ;
-    padding: 0  ;
-
-}
-    #bodr {
-    float: right;
-    position: relative;
-    text-align: center;
-    right: 20px;
-    bottom: 60px;
-    height: 38px;
-    width: 50px;
-    display: block !important;
-    border-style: solid;
-    border-color: lightgrey;
-    background-color: lightgrey;
-    cursor: pointer;
-}
-  .boder {
-    position: relative;
-    margin-top: 4px;
-    margin-left: 4px;
-    display: block;
-    width: 22px;
-    height: 2px;
-  text-align: center;
-    border-radius: 1px;
-    box-sizing: border-box;
-    background-color: #888888;
-
-}
-
-    .vertical1{
-
-    height: 45px;
-    float: right;
-    display: inline-block;
-    /*border-right-style:solid ;*/
-    border-width: 1px;
-    border-color: #dcdcdc;
-    color: #888888;
-     line-height:45px;
+    .collapse {
+        /*z-index: 2;*/
+        /*left: 0;*/
+        /*top:0;*/
+        /*right: 0;*/
+        height: auto;
+        /*line-height: 80px;*/
+        background-color: white;
+        box-shadow: 1px 2px 3px #888888;
+        border-width: 1px;
         padding: 0;
-    /*padding: 0 10px 0 5px;*/
-
-}
-.vertical2 {
-    height: 45px;
-    float: left;
-    display: inline-block;
-    border-style: none solid;
-    border-width: 1px;
-    border-color: #dcdcdc;
-    line-height: 45px;
-    /*padding: 0 10px;*/
-    color: #888888;
-}
-
-    .services2,.services4,.services6,.services8{
-        width: 100%;
-        float: left;
-        margin-right:0;
 
     }
-    .content{
-    color: #808080;
-    margin: 60px 0 0 40px;
-    font-size: 18px;
+
+    #bodr {
+        float: right;
+        position: relative;
+        text-align: center;
+        right: 20px;
+        bottom: 60px;
+        height: 38px;
+        width: 50px;
+        display: block !important;
+        border-style: solid;
+        border-color: lightgrey;
+        background-color: lightgrey;
+        cursor: pointer;
+    }
+
+    .boder {
+        position: relative;
+        margin-top: 4px;
+        margin-left: 4px;
+        display: block;
+        width: 22px;
+        height: 2px;
+        text-align: center;
+        border-radius: 1px;
+        box-sizing: border-box;
+        background-color: #888888;
+
+    }
+
+    .vertical1 {
+
+        height: 45px;
+        float: right;
+        display: inline-block;
+        /*border-right-style:solid ;*/
+        border-width: 1px;
+        border-color: #dcdcdc;
+        color: #888888;
+        line-height: 45px;
+        padding: 0;
+        /*padding: 0 10px 0 5px;*/
+
+    }
+
+    .vertical2 {
+        height: 45px;
+        float: left;
+        display: inline-block;
+        border-style: none solid;
+        border-width: 1px;
+        border-color: #dcdcdc;
+        line-height: 45px;
+        /*padding: 0 10px;*/
+        color: #888888;
+    }
+
+    .services2, .services4, .services6, .services8 {
+        width: 100%;
+        float: left;
+        margin-right: 0;
+
+    }
+
+    .content {
+        color: #808080;
+        margin: 60px 0 0 40px;
+        font-size: 18px;
         width: 100%;
 
+    }
 
-}
     .text2 {
         position: absolute;
         color: black;
@@ -402,17 +341,19 @@ margin: 0 60px 0 0;
         float: left;
         width: 100%;
     }
-    .services1,.services3,.services5,.services7{
-       width: 100%;
-        margin-right:0;
+
+    .services1, .services3, .services5, .services7 {
+        width: 100%;
+        margin-right: 0;
         float: left;
     }
 
-    .Title{
+    .Title {
 
-    margin: 50px 110px 0 20px;
-}
-.naver{
+        margin: 50px 110px 0 20px;
+    }
+
+   .naver{
     float: none;
     padding-top: 80px;
 }
@@ -450,6 +391,9 @@ margin: 0 60px 0 0;
         width: 100%;
 }
 
+    .picture1,.picture2,.picture3{
+        width: 100% !important;
+    }
 
 }
 
@@ -457,16 +401,17 @@ margin: 0 60px 0 0;
 
 @media only screen and (max-width:1125px) {
     .frame {
+        display: block;
+        overflow: hidden;
+        /*overflow: auto;*/
         padding: 30px 110px 0 110px;
         height: auto;
         background-color: #f5f5f5;
-        margin: 700px 0 30px 0;
+        margin: auto 0 30px 0;
     }
 
     .picture1 {
-        /*float: left;*/
-        display:inline ;
-        /*display: block;*/
+        float: left;
         width: 50%;
         text-align: center;
         padding: 50px 0;
@@ -474,15 +419,13 @@ margin: 0 60px 0 0;
     }
 
     .picture3 {
-        display: inline;
-        /*display: block;*/
         width: 50%;
         text-align: center;
         margin-top: 50px;
     }
 
     .picture2 {
-        /*display: block;*/
+
         display: inline;
         float: right;
         width: 50%;
@@ -492,24 +435,93 @@ margin: 0 60px 0 0;
     }
 
     .photo1 {
-        /*display:block;*/
         text-align: center;
+        display: inline;
 
     }
 
     .development {
         margin: 20px;
-    color:black;
-    font-size: 25px;
-    font-weight: bold;
+        color: black;
+        font-size: 25px;
+        font-weight: bold;
 
     }
 
     .written {
         text-align: center;
         color: #888888;
-        /*margin: 60px 0 0 0;*/
         font-size: 18px;
+    }
+
+    .D {
+        font-size: 25px;
+        margin-left: 15px;
+    }
+
+    .facebook {
+        color: black;
+        text-align: center;
+        padding-top: 50px;
+        display: inline-block;
+        width: 1355px;
+    }
+
+    .bottom_font {
+        text-align: center;
+        color: #7c7b7e;
+    }
+
+    .bottom_font p {
+        color: white;
+        cursor: pointer;
+        display: inline-block;
+    }
+
+    .bottom_list {
+        width: 100%;
+
+
+        overflow: hidden;
+        color: white;
+        background-color: black;
+
+
+    }
+
+.small_list{
+   display: inline-block;
+    width: 50%;
+}
+/*.services2,.services4,.services6,.services8{*/
+    /*float: right;*/
+    /*width: 50%;*/
+
+    /*margin: 0 0 20px 0;*/
+/*}*/
+/*.services1,.services3,.services5,.services7{*/
+    /*float: left;*/
+    /*width: 50%;*/
+    /*margin: 0 0 20px 0;*/
+/*}*/
+
+    .list_font {
+        font-size: 20px;
+        height: 18px;
+        cursor: pointer;
+        line-height: 18px;
+        padding: 12px 5px 0 0;
+    }
+
+    .list_font_s {
+        font-size: 20px;
+        height: 18px;
+        line-height: 18px;
+        padding: 12px 5px 0 0;
+    }
+
+    .bottom_list h2 {
+        color: #29b5ff;
     }
 }
 /*@media only screen and (max-width:900px) {*/
@@ -568,9 +580,11 @@ margin: 0 60px 0 0;
 @media only screen and (min-width:1335px) {
     .frame {
         padding: 30px 110px 0 110px;
-        height: 1000px;
         background-color: #f5f5f5;
-        margin: 700px 0 30px 0;
+        display: block;
+        overflow: auto;
+        height: auto;
+        margin: auto 0 30px 0;
     }
 
 .picture3,.picture2,.picture1{
@@ -594,7 +608,7 @@ margin: 0 60px 0 0;
         font-size: 18px;
         padding:  0 10px;
     }
-}
+
 .D{
     font-size: 25px;
     margin-left: 15px;
@@ -616,16 +630,23 @@ margin: 0 60px 0 0;
     display: inline-block;
 }
 .bottom_list{
-    height: 300px;
+    width: 100%;
+    /*height: 300px;*/
+
+   overflow: hidden;
     color: white;
     background-color: black;
-    padding: 0 50px;
-    display: inline-block;
+
+
+    /*display: inline-block;*/
+
 }
 .small_bottom_list{
-    width: 300px;
+    width:17.5%;
     height: auto;
     display: inline-block;
+    padding: 20px;
+    margin: 0 20px;
 }
 .list_font{
     font-size: 20px;
@@ -642,4 +663,5 @@ margin: 0 60px 0 0;
 }
 .bottom_list h2{
     color: #29b5ff;
+}
 }
